src/templating/snapshots/yolk__templating__parser__test__error_empty_tag.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%%}\").unwrap_err())"
---
  × Failed to parse yolk template file

Error: 
  × Expected expression.
   ╭─[file:1:2]
 1 │ {%%}
   ·  ┬
   ·  ╰── here
   ╰────
